# SceneSpark

./: .docker-compose.dev.env  .docker-compose.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Makefile  README.md  build.sh  docker-compose.dev.yaml  docker-compose.yaml  open_backend_log_service.sh  pyproject.toml  requirements.in  requirements.txt  run.sh  setup.py
.github/workflows/: build.yml  pre-commit-api.yml
api/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Makefile  README.md  base.dockerfile  build.sh  prompt_text.py  pyproject.toml  requirements.in  requirements.txt  run.sh  setup.cfg
api/app/: main.py
api/app/bgtasks/: bg_tasks.py
api/app/clips/: clips.py  schemas.py
api/app/libs/: config.py
api/app/prompts/: prompts.py
api/app/static/: index.html
api/app/uploads/: uploads.py
api/clippers/: base_clipper.py  frame_sampler.py  llm_vision_clipper.py  subtitle_clipper.py
api/clippers/prompt/: prompt_text.py
api/clippers/wrappers/: autocut_wrapper.py  llm_wrapper.py
api/llm/: autocut_wrapper.py  client_pool.py  llm_wrapper.py
api/prompt/: prompt_text.py
api/utils/: sentry.py  tools.py
app/: __init__.py  main.py
app/bgtasks/: bg_tasks.py
app/internal/: healthz.py
app/libs/: autocut_wrapper.py  config.py  openai_wrapper.py
clippers/: base_clipper.py  llm_vision_clipper.py  subtitle_clipper.py
nginx/: default.conf  scenespark.conf
tests/: conftest.py
utils/: http_tools.py  sentry.py
web/: .dockerignore  Dockerfile  build.sh  package-lock.json  package.json
(+26 files in other folders)
