[metadata]
name = SceneSpark
version = attr: app.__version__.__version__
description = Automatically extract and generate key scenes from videos, creating impactful and concise highlights.
long_description = file: README.md
long_description_content_type = text/markdown
author = Nathon Wong
author_email = nathonxxxx@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9.5

[options.entry_points]
console_scripts =
    run-fastapi = app.cli:main
